[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Abdullah Alqahtani <anqorithm@protonmail.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
langchain = "^0.3.20"
openai = "^1.65.5"
uvicorn = "^0.34.0"
langchain-community = "^0.3.19"
python-multipart = "^0.0.20"
pydantic-settings = "^2.8.1"
langchain-openai = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
